--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 
         <!-- DEPENDENCIES VERSIONS    -SNAPSHOT  -->
         <slf4j.version>2.0.3</slf4j.version>
-        <pi4j.version>2.4.0-SNAPSHOT</pi4j.version>
+        <pi4j.version>2.5.0-SNAPSHOT</pi4j.version>
 
         <!-- BUILD PLUGIN VERSIONS -->
         <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
@@ -126,6 +126,11 @@
             <artifactId>pi4j-plugin-pigpio</artifactId>
             <version>${pi4j.version}</version>
         </dependency>
+        <!--dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-plugin-gpiod</artifactId>
+            <version>${pi4j.version}</version>
+        </dependency-->
         <!--- log4j version 2   -->
         <!--dependency>
             <groupId>org.apache.logging.log4j</groupId>
